--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -1,31 +1,71 @@
-<form class="border border-dark m-3 p-5 bg1 " action="">
-    <div class="container">
-      <h1 class="r1">Registration-Form</h1>
-      <div class="form-page">
-        <label for="firstname"></label>
-        <input type="text" name="firstname" class="form-control" placeholder="First Name">
-      </div>
-      <pre></pre>
-      <div class="form-page">
-        <label for="lastname"></label>
-        <input type="text" name="lastname" class="form-control" placeholder="Last Name">
-      </div>
-      <pre></pre>
-      <div class="form-page">
-        <label for="phone"></label>
-        <input type="tel" name="phone" class="form-control" placeholder="Phone">
-      </div>
-      <pre></pre>
-      <div class="form-page">
-        <label for="email"></label>
-        <input type="email" name="email" class="form-control" placeholder="Email">
-      </div>
-      <pre></pre>
-      <div class="form-page">
-        <label for="Currentlocation"></label>
-        <input type="text" name="Currentlocation" class="form-control" placeholder="Location">
-      </div>
-      <pre></pre>
-      <button class="btn btn-primary" type="submit">Submit</button>
+<form class="border border-dark m-3 p-5 bg1" action="">
+  <div class="container">
+    <h1 class="r1">Registration-Form</h1>
+    <div class="form-page">
+      <input
+        type="text"
+        name="name"
+        class="form-control"
+        placeholder="Full Name*"
+        required
+      />
     </div>
+    <pre></pre>
+    <div class="form-page">
+      <input
+        type="tel"
+        name="phone"
+        class="form-control"
+        placeholder="Phone*"
+        required
+      />
+    </div>
+    <pre></pre>
+    <div class="form-page">
+      <input
+        type="email"
+        name="email"
+        class="form-control"
+        placeholder="Email*"
+        required
+      />
+    </div>
+    <pre></pre>
+    <div class="form-page qual1">
+      <div class="">
+        <select
+          name="Qualification"
+          id="Qualification"
+          class="form-control"
+          required
+        >
+          <option value=""> - Select Qualification-</option>
+          <option value="10th">10th</option>
+          <option value="12th">12th</option>
+          <option value="Graduation">Graduation(In relevant field)</option>
+          <option value="Graduation">Post Graduation(In relevant field)</option>
+        </select>
+      </div>
+      <div class="">
+        <input
+          type="text"
+          name="Qualification_marks"
+          class="form-control"
+          placeholder="Percentage or cgpa*"
+          required
+        />
+      </div>
+    </div>
+    <pre></pre>
+    <div class="form-page">
+      <input
+        type="text"
+        name="location"
+        class="form-control"
+        placeholder="Current Location"
+      />
+    </div>
+    <pre></pre>
+    <button class="btn btn-primary" type="submit" onclick="data1">Submit</button>
+  </div>
 </form>
